--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Chat App</title>
         <link rel="icon" href="/img/favicon.png">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <!-- <link rel="stylesheet" href="/css/styles.min.css"> -->
         <link rel="stylesheet" href="/css/styles.css">
     </head>
